2003-03-05  Jody Goldberg <jody@gnome.org>

	* src/test-pango.c (main) : init initial_workbook_open_complete so
	  that things exit on last unref.

	* src/item-grid.c (item_grid_button_press) : more morton warnings.

2003-03-05  Morten Welinder  <terra@diku.dk>

	* src/format-template.c (format_template_save): Fix grave
	integer/gboolean confusion.

	* src/workbook-control-gui.c (workbook_close_if_user_permits): Fix
	grave integer/gboolean confusion.

	* src/xml-io.c (xml_node_set_color): Fix pointer/integer
	confusion.

	* src/consolidate.c (cb_col_tree): Fix return type.

	* src/style-border.c (style_border_fetch): Fix pointer/integer
	confusion.

	* src/workbook.c (workbook_date_conv): Fix pointer/gboolean
	confusion.

2003-02-28  Morten Welinder  <terra@diku.dk>

	* src/mathfunc.c (random_01): Get larger chunks of randomness.
	People who need randomness tend to need a lot.

2003-02-26  Morten Welinder  <terra@diku.dk>

	* src/rendered-value.h: No more rendered_text member.

	* src/rendered-value.c (rendered_value_destroy): Don't release
	rendered_text.
	(rendered_value_new): Don't set rendered_text.  Change to using
	format_value_gstring.  Recycle the GString.
	(rendered_value_get_text): Don't check rendered_text because we
	don't use it.
	(cb_rendered_value_pool_leak): Use the pango text.

	* src/print-cell.c (print_cell): Use the pango text.

	* src/print-info.c (render_value_with_format): Use
	format_value_gstring.

	* src/format.c (format_number): Change to take a GString *
	argument.  All callers changed.
	(fmt_general_float): Ditto.
	(fmt_general_int): Ditto.
	(format_value_gstring): New function copied from format_value.
	(format_value): Changed to a simple wrapper around
	format_value_gstring.

	* src/formats.c (cell_format_is_number): Don't redefine macro.

2003-02-24  Morten Welinder  <terra@diku.dk>

	* src/sheet-object-bonobo.c (sheet_object_bonobo_set_object_iid):
	Don't use '== TRUE'.
